--- a/game.html
+++ b/game.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Damn you me!</title>
 <style>
 .centerbox {
   /* flexbox, por favor */
@@ -16,6 +17,8 @@ body, html { width: 100%; height: 100%; padding: 0; margin: 0; }
 canvas {
   border-radius: 30px;
   box-shadow: 0 0 10px #777;
+  width: 800px;
+  height: 600px;
 }
 body {
   background-color: #eee;
