--- a/game.html
+++ b/game.html
@@ -20,6 +20,19 @@ canvas {
   width: 800px;
   height: 600px;
 }
+
+@font-face {
+    font-family: 'KongtextRegular';
+    src: url('assets/kongtext-webfont.eot');
+    src: url('assets/kongtext-webfont.eot?#iefix') format('embedded-opentype'),
+         url('assets/kongtext-webfont.woff') format('woff'),
+         url('assets/kongtext-webfont.ttf') format('truetype'),
+         url('assets/kongtext-webfont.svg#KongtextRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body {
   background-color: #eee;
 }
