--- a/game.html
+++ b/game.html
@@ -38,5 +38,7 @@ body {
 }
 </style>
 <div class='centerbox'><canvas></canvas></div>
+<audio id='menu' src='sounds/tanks-tanks-tanks.mp3' loop='true'></audio>
+<audio id='music' src='sounds/game.mp3' loop='true'></audio>
 <script src="atom.js"></script>
 <script src="game.js"></script>
