--- a/game.html
+++ b/game.html
@@ -8,6 +8,10 @@
   -webkit-box-pack: center;
   -webkit-box-align: center;
 
+  display: -moz-box;
+  -moz-box-orient: horizontal;
+  -moz-box-pack: center;
+  -moz-box-align: center;
 
   width: 100%;
   height: 100%;
@@ -30,7 +34,6 @@ canvas {
          url('assets/kongtext-webfont.svg#KongtextRegular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 body {
@@ -38,7 +41,13 @@ body {
 }
 </style>
 <div class='centerbox'><canvas></canvas></div>
-<audio id='menu' src='sounds/tanks-tanks-tanks.mp3' loop='true'></audio>
-<audio id='music' src='sounds/game.mp3' loop='true'></audio>
+<audio id='menu' loop='true' autoplay=true>
+  <source src='sounds/tanks-tanks-tanks.mp3' />
+  <source src='sounds/tanks-tanks-tanks.ogg' />
+</audio>
+<audio id='music' loop='true'>
+  <source src='sounds/game.mp3' />
+  <source src='sounds/game.ogg' />
+</audio>
 <script src="atom.js"></script>
 <script src="game.js"></script>
